--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 <script>
 for (var i=1;i<=9;i++)
 {
-     document.write("<tr>");
+     document.write('<tr>');
      for(var j=1;j<=i;j++）
     {
-         document.write("<td>");
-          document.write(i+"x"+j+"="+i*j);
-           document.write("<td>");
+         document.write('<td>');
+          document.write(i+'x'+j+'='+i*j);
+           document.write('<td>');
      }
-      document.write("<tr>");
+      document.write(<tr>');
 }
 
-</script>
-</table>
-</body>
-</html>
+<script>
+<table>
+<body>
+<html>
